--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,9 @@
 </head>
 
 <body>
-    <div id="root" class="root">
-        <h1>你的浏览器不支持！</h1>
+    <p class="titleLogo"></p>
+    <div id="root" class="root" >
     </div>
-    
 </body>
 
 </html>
