--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,15 @@
 
 <body>
     <p class="titleLogo"></p>
-    <div id="root" class="root" >
+    <div id="root" class="root">
     </div>
+    <script language="javascript">
+        //防止页面后退
+        history.pushState(null, null, document.URL);
+        window.addEventListener('popstate', function () {
+            history.pushState(null, null, document.URL);
+        });
+    </script>
 </body>
 
 </html>
