--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
         window.addEventListener('popstate', function () {
             history.pushState(null, null, document.URL);
         });
+        var s;
     </script>
 </body>
 
