--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
         window.addEventListener('popstate', function () {
             history.pushState(null, null, document.URL);
         });
+        window.onload=function(){
+            var a
+        }
     </script>
 </body>
 
