--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
     <p class="titleLogo"></p>
     <div id="root" class="root">
     </div>
-    <!-- <script language="javascript">
+    <script language="javascript">
         //防止页面后退
         history.pushState(null, null, document.URL);
         window.addEventListener('popstate', function () {
             history.pushState(null, null, document.URL);
         });
-    </script> -->
+    </script>
 </body>
 
 </html>
