--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <div id="root" class="root">
     </div>
     <script language="javascript">
-        //防止页面后退
+        //防止页面后退2023年4月20日
         history.pushState(null, null, document.URL);
         window.addEventListener('popstate', function () {
             history.pushState(null, null, document.URL);
